# assembler_C_labaratory_final_project

./: CMakeLists.txt  README.md  assembler  assembler.c  assembler.h  bdika_1.am  config.h  context.h  data_memory.c  directives.c  encoder.c  encoder.h  errors.c  errors.h  externals.c  externals.h  files.c  files.h  first_pass.c  instruction_memory.c  instructions.c  klt1.am  klt1.as  labels.c  labels.h  lines_map.c  lines_map.h  makefile  memory_relocation.c  memory_relocation.h  pre_processor.c  pre_processor.h  readme.md  second_pass.c  typedef.h  util.c  util.h
Header_Files/: boolean.h  context.h  data_memory.h  directives.h  errors.h  files.h  first_pass.h  labels.h  lines_map.h  pre_processor.h  sys_memory.h  tables.h  util.h
Header_files/: addresses.h  config.h  context.h  encoder.h  errors.h  instruction_memory.h  instructions.h  second_pass.h  util.h
Source_Files/: addresses.c  assembler.c  data_memory.c  directives.c  encoder.c  errors.c  externals.c  files.c  first_pass.c  instruction_memory.c  instructions.c  labels.c  lines_map.c  pre_processor.c  sys_memory.c  tables.c  util.c
invalid_files_test/: invalid1.am  invalid1.as  invalid5.am  qqq.as
source_files/: data_memory.c  directives.c  errors.c  externals.c  files.c  first_pass.c  instructions.c  labels.c  lines_map.c  pre_processor.c  second_pass.c  sys_memory.c  util.c
tests/invalid_files_test/: invalid1.as  invalid2.am  invalid2.as  invalid3.am  invalid3.as  invalid4.as  invalid5.as  invalid666.am  invalid666.as  invalid7.am  invalid8.as  invalid9.as
tests/valid_files_test/: valid1.am  valid1.as  valid1.ent  valid1.ext  valid2.am  valid3.ent
valid_files_test/: valid1.ent  valid1.ext  valid2.as  valid2.ent
